fix crash on view deletion if ranges are still alive

BUG: 422546